--- a/assets/style.css
+++ b/assets/style.css
@@ -6,8 +6,8 @@
     height:auto;
     overflow:hidden;
     
-    margin: -31px;
-    margin-left:-7px;
+    margin: 10px;
+    margin-left:5px;
     border: 6px solid rgba(0, 77, 64, 0.4);
     border-radius: 50% !important;
 }
@@ -17,7 +17,196 @@
     height: auto;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap);
+
+nav {
+    padding: 0 15px;
+    position: relative;
+    top: 5px;
+}
+main {
+    padding-left: 190px;
+    background-color: #a7e7ff;
+}
+.container {
+    color: rgb(0, 0, 0);
+
+    font-weight: 200;
+    left: 50;
+    position: relative;
+    top: 0;
+}
+
+.overlay {
+    background-color: #a7ffeb;
+    height: 100%;
+    left: 50;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+.myname {
+    background-color: cornflowerblue !important;
+}
+.caption {
+  position: absolute;
+  top: 0;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  height: 180px;
+  overflow: hidden;
+  
+  font-family: 'Roboto', sans-serif;
+  font-size: 35px;
+  line-height: 40px;
+  color: black;
+  
+}
+.caption.text {
+    font-weight: 600;
+    overflow: hidden;
+    height: 40px;
+    padding: 0 40px;
+}
+.caption.item::before {
+    content: '['; 
+    left: 0;
+    position: absolute;
+    top: 0;
+    left: 100px;
+    
+    color: #16a085;
+    font-size: 42px;
+    line-height: 40px;
+    
+    -webkit-animation-name: opacity;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: opacity;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+.caption.item::after {
+    content: ']'; 
+    position: absolute; 
+    right: 0;
+    position: absolute;
+    top: 0;
+    
+    color: black;
+    font-size: 42px;
+    line-height: 40px;
+    
+    -webkit-animation-name: opacity;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: opacity;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+.caption.list {
+      margin-top: 0;
+      padding-left: 110px;
+      text-align: left;
+      list-style: none;
+      left: 200px;
+      color: black;
+
+      line-height:40px;
+      margin:0;
+      left: 100px;
+      color: black;
+
+      
+      -webkit-animation-name: change;
+      -webkit-animation-duration: 10s;
+      -webkit-animation-iteration-count: infinite;
+      animation-name: change;
+      animation-duration: 10s;
+      animation-iteration-count: infinite;
+
+    }
+
+.caption.item {
+    margin-top: 0;
+    padding-left: 110px;
+    text-align: left;
+    list-style: none;
+    left: 200px;
+    color: black;
+
+    line-height:40px;
+    margin:0;
+    left: 100px;
+    color: black;
+
+    
+    -webkit-animation-name: change;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: change;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    }
+
+
+
+@-webkit-keyframes opacity {
+  0%, 100% {opacity:0;}
+  50% {opacity:1;}
+}
+
+@-webkit-keyframes change {
+  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+  33.32%,45.98% {transform:translate3d(0,-50%,0);}
+  49.98%,62.64% {transform:translate3d(0,-75%,0);}
+  66.64%,79.3% {transform:translate3d(0,-50%,0);}
+  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
+
+@-o-keyframes opacity {
+  0%, 100% {opacity:0;}
+  50% {opacity:1;}
+}
+
+@-o-keyframes change {
+  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+  33.32%,45.98% {transform:translate3d(0,-50%,0);}
+  49.98%,62.64% {transform:translate3d(0,-75%,0);}
+  66.64%,79.3% {transform:translate3d(0,-50%,0);}
+  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
+
+@-moz-keyframes opacity {
+  0%, 100% {opacity:0;}
+  50% {opacity:1;}
+}
+
+@-moz-keyframes change {
+  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+  33.32%,45.98% {transform:translate3d(0,-50%,0);}
+  49.98%,62.64% {transform:translate3d(0,-75%,0);}
+  66.64%,79.3% {transform:translate3d(0,-50%,0);}
+  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
+
+@keyframes opacity {
+  0%, 100% {opacity:0;}
+  50% {opacity:1;}
+}
+
+@keyframes change {
+  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+  33.32%,45.98% {transform:translate3d(0,-50%,0);}
+  49.98%,62.64% {transform:translate3d(0,-75%,0);}
+  66.64%,79.3% {transform:translate3d(0,-50%,0);}
+  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
 
 .social {
     margin: 0 auto;
@@ -46,7 +235,13 @@
     display: inline-block;
     border-radius: 3px;
 }
+nav {
+    background: #fff;
+    height: 160px;
+    position: absolute;
+  }
 body {
     font-family: 'Roboto', sans-serif;
-
+    background-color: #a7e7ff;
+    font-size: 18px;
 }
