--- a/assets/style.css
+++ b/assets/style.css
@@ -19,22 +19,41 @@
 
 @import url(https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap);
 
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #a7e7ff;
+    font-size: 18px;
+}
 nav {
+    background: white;
+    box-shadow: none;
+    height: 0;
+}
+
+nav i {
     padding: 0 15px;
     position: relative;
     top: 5px;
 }
+
 main {
     padding-left: 190px;
     background-color: #a7e7ff;
 }
+
+ul.side-nav {
+    width: 190px;
+}
+
+ul.side-nav li {
+    padding: 0;
+}
 .container {
     color: rgb(0, 0, 0);
-
     font-weight: 200;
-    left: 50;
-    position: relative;
-    top: 0;
+    left: 20%;
+    position: absolute;
+    top: 40px;
 }
 
 .overlay {
@@ -46,102 +65,40 @@ main {
     width: 100%;
 }
 .myname {
-    background-color: cornflowerblue !important;
+    background-color: cornflowerblue;
 }
 .caption {
   position: absolute;
-  top: 0;
+  top: 7%;
   left: 20%;
-  transform: translate(-50%, -50%);
-  height: 180px;
-  overflow: hidden;
-  
+  display: inline-block;
   font-family: 'Roboto', sans-serif;
-  font-size: 35px;
+  font-size: 24px;
   line-height: 40px;
-  color: black;
+  color: #16a085;
+  -webkit-animation-name: opacity;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+  animation-name: opacity;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
   
 }
-.caption.text {
-    font-weight: 600;
+
+.list {
+    position: absolute;
+    height: 100px;
+    left: 20%;
+    top: 7%;
+    padding-top: 19px;
     overflow: hidden;
-    height: 40px;
-    padding: 0 40px;
-}
-.caption.item::before {
-    content: '['; 
-    left: 0;
-    position: absolute;
-    top: 0;
-    left: 100px;
-    
-    color: #16a085;
-    font-size: 42px;
-    line-height: 40px;
-    
-    -webkit-animation-name: opacity;
-    -webkit-animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
-    animation-name: opacity;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-}
-.caption.item::after {
-    content: ']'; 
-    position: absolute; 
-    right: 0;
-    position: absolute;
-    top: 0;
-    
-    color: black;
-    font-size: 42px;
-    line-height: 40px;
-    
-    -webkit-animation-name: opacity;
-    -webkit-animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
-    animation-name: opacity;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-}
-
-.caption.list {
-      margin-top: 0;
-      padding-left: 110px;
-      text-align: left;
-      list-style: none;
-      left: 200px;
-      color: black;
-
-      line-height:40px;
-      margin:0;
-      left: 100px;
-      color: black;
-
-      
-      -webkit-animation-name: change;
-      -webkit-animation-duration: 10s;
-      -webkit-animation-iteration-count: infinite;
-      animation-name: change;
-      animation-duration: 10s;
-      animation-iteration-count: infinite;
-
-    }
-
-.caption.item {
-    margin-top: 0;
-    padding-left: 110px;
-    text-align: left;
+    font-weight: 600;
+    transform: translate(-50%, -50%);
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    line-height: 20px;
     list-style: none;
-    left: 200px;
-    color: black;
-
-    line-height:40px;
-    margin:0;
-    left: 100px;
-    color: black;
-
-    
+    color: #16a085;
     -webkit-animation-name: change;
     -webkit-animation-duration: 10s;
     -webkit-animation-iteration-count: infinite;
@@ -149,8 +106,20 @@ main {
     animation-duration: 10s;
     animation-iteration-count: infinite;
     }
-
-
+    
+.list > item {
+    bottom: 20px;
+    text-align: left;
+    line-height: 20px;
+    font-size: 60px;
+    position: absolute;
+    -webkit-animation-name: change;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: change;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    }
 
 @-webkit-keyframes opacity {
   0%, 100% {opacity:0;}
@@ -235,13 +204,4 @@ main {
     display: inline-block;
     border-radius: 3px;
 }
-nav {
-    background: #fff;
-    height: 160px;
-    position: absolute;
-  }
-body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #a7e7ff;
-    font-size: 18px;
-}
+
