--- a/assets/style.css
+++ b/assets/style.css
@@ -6,8 +6,8 @@
     height:auto;
     overflow:hidden;
     
-    margin: 10px;
-    margin-left:5px;
+    margin: 0;
+    margin-left:0;
     border: 6px solid rgba(0, 77, 64, 0.4);
     border-radius: 50% !important;
 }
@@ -17,60 +17,110 @@
     height: auto;
 }
 
+a {
+    color: #004d40;
+  }
 @import url(https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap);
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #a7e7ff;
     font-size: 18px;
+    position: relative;
+    background-color: white;
 }
 nav {
-    background: white;
+    background-color: white;
     box-shadow: none;
     height: 0;
 }
 
 nav i {
-    padding: 0 15px;
+
+    padding: 0 2px;
     position: relative;
     top: 5px;
+
 }
 
 main {
-    padding-left: 190px;
-    background-color: #a7e7ff;
+    padding-left: 200px;
+    background-color: white;
+}
+ul {
+    list-style: none;
+    font-size: 1.5em;
+
 }
 
-ul.side-nav {
+ul > side-nav {
     width: 190px;
+    padding-bottom: 30px;
 }
 
-ul.side-nav li {
+ul > side-nav li {
     padding: 0;
-}
-.container {
-    color: rgb(0, 0, 0);
-    font-weight: 200;
-    left: 20%;
-    position: absolute;
-    top: 40px;
+    list-style: none;
+
 }
 
-.overlay {
-    background-color: #a7ffeb;
-    height: 100%;
-    left: 50;
+.section {
+    padding-bottom: 10px;
+    background-image: url("https://free4kwallpapers.com/uploads/originals/2016/02/08/graph-paper-grid-wallpaper.jpg");
+    height: 417px;
+    background-position: center;
+    background-size: cover;
+    padding-top: 0;
+    padding-left: 0;
+    position: relative;
+}
+
+#intro.section {
+    background: #6dbcde;
+    position: relative;
+    display: flex;
+    height: 100vh;
+
+  }
+  
+.container {
+    text-align: left;
+    font-weight: 200;
+    left: 5%;
     position: absolute;
-    top: 0;
-    width: 100%;
+    height: 20px;
+    overflow: hidden;
+    top: 5%;
+}
+
+.greeting {
+    position: relative;
+    padding-top: 0;
+    padding-left: 130px;
+    font-size: 3em;
+}
+
+.title {
+    font-size: 2em;
+    background-color: teal;
+    color: white;
+    padding-left: 10px;
+    padding-top: 0;
+}
+
+.profile-containers{
+    text-align: left;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-weight: 600;
 }
 .myname {
-    background-color: cornflowerblue;
+    background: cornflowerblue;
 }
 .caption {
   position: absolute;
-  top: 7%;
-  left: 20%;
+  text-align: left;
+  padding-left: 130px;
+  padding-top: 100px;
   display: inline-block;
   font-family: 'Roboto', sans-serif;
   font-size: 24px;
@@ -87,18 +137,22 @@ ul.side-nav li {
 
 .list {
     position: absolute;
-    height: 100px;
-    left: 20%;
-    top: 7%;
-    padding-top: 19px;
-    overflow: hidden;
+    height: 40px;
+    padding-left: 160px;
+    padding-top: 100px;
+    padding-bottom: 5px;
+
+    display: inline-block;
+
+    white-space: nowrap;
     font-weight: 600;
     transform: translate(-50%, -50%);
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
-    line-height: 20px;
+    line-height: 25px;
     list-style: none;
     color: #16a085;
+    -webkit-line-clamp: 1;
     -webkit-animation-name: change;
     -webkit-animation-duration: 10s;
     -webkit-animation-iteration-count: infinite;
@@ -108,17 +162,10 @@ ul.side-nav li {
     }
     
 .list > item {
-    bottom: 20px;
     text-align: left;
-    line-height: 20px;
-    font-size: 60px;
-    position: absolute;
-    -webkit-animation-name: change;
-    -webkit-animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
-    animation-name: change;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
+    height: 20px;
+    line-height: 20;
+    overflow: hidden;
     }
 
 @-webkit-keyframes opacity {
@@ -178,14 +225,53 @@ ul.side-nav li {
 }
 
 .social {
-    margin: 0 auto;
+    margin: 0 60px;
     width: auto;
-    text-align: inherit;
-    padding: 10px;
+    text-align: left;
+    left: 20px;
+    padding: 50px;
+    position: relative;
+    top: 220px;
 }
 
-.github {
-    color: black;
+.icon-linkedin {
+    margin-left: 0;
+    width: 60px;
+    height: 50px;
+    text-align: center;
+    padding: 0px;
+    color: #0077b5;
+    cursor: pointer;
+    font-size: 40px;
+    line-height: 50px;
+    border-radius: 45px;
+    display: inline-block;
+    margin: 4px;
+  }
+
+.icon-github {
+    margin: 0 30px;
+    width: 60px;
+    height: 50px;
+    position: absolute;
+    background-image: url("https://img.icons8.com/small/452/github.png");
+    background-position: center;
+    background-size: auto;
+    cursor: pointer;
+    font-size: 40px;
+    line-height: 50px;
+    border-radius: 45px;
+    display: inline-block;
+    margin: 4px;
+}
+
+.icon-linkedin:hover{
+    background-color: #0077b5;
+    color: white;
+}
+
+.icon-github:hover {
+    -webkit-filter: invert(100%) !important;
 }
 
 .linkdin {
