--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@
     
     margin: 0;
     margin-left:0;
-    border: 6px solid rgba(0, 77, 64, 0.4);
+    border: 6px solid #79acc9;
     border-radius: 50% !important;
 }
 
@@ -26,11 +26,14 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     position: relative;
-    background-color: white;
+    background-color: #a5abad;
 }
 nav {
     background-color: white;
-    box-shadow: none;
+    position: fixed;
+    -moz-box-shadow:    -3px 0 20px 0 #555;
+    -webkit-box-shadow: -3px 0 20px 0 #555;
+    box-shadow:         -3px 0 20px 0 #555;
     height: 0;
 }
 
@@ -75,7 +78,8 @@ ul > side-nav li {
 }
 
 #intro.section {
-    background: #6dbcde;
+    background: #79acc9;
+    
     position: relative;
     display: flex;
     height: 100vh;
@@ -100,11 +104,12 @@ ul > side-nav li {
 }
 
 .title {
-    font-size: 2em;
+    font-size: 2.5em;
     background-color: teal;
     color: white;
     padding-left: 10px;
-    padding-top: 0;
+    padding-top: 10;
+    padding-bottom: 10px;
 }
 
 .profile-containers{
@@ -222,6 +227,31 @@ ul > side-nav li {
   49.98%,62.64% {transform:translate3d(0,-75%,0);}
   66.64%,79.3% {transform:translate3d(0,-50%,0);}
   83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+
+}
+
+.video-container iframe,  
+.video-container object,  
+.video-container embed {
+	position: absolute;
+	top: 60%;
+	left: -30%;
+	width: 100%;
+	height: 100%;
+}
+.video-wrapper {
+	width: 640px;
+	float:none;
+	margin-left:auto;
+	margin-right:auto;
+	max-width: 100%;
 }
 
 .social {
