imported eyes.js project
Imported eyes.js and added to the projects page.

Added place holder for Bus Tracking app  on the projects page.

--- a/assets/style.css
+++ b/assets/style.css
@@ -461,5 +461,8 @@ ul > side-nav li {
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
   }
-
+.eyes {
+    padding-top: 25%;
+    align-items: center;
+}
   
