--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ ul > side-nav li {
 }
 
 .greeting {
-    position: relative;
+    position: absolute;
     padding-top: 50px;
     padding-left: 130px;
     font-size: 3em;
@@ -256,7 +256,7 @@ ul > side-nav li {
 .video-container embed {
 	position: absolute;
 	top: 60%;
-	left: -30%;
+	left: -190%;
 	width: 100%;
 	height: 100%;
 }
