--- a/assets/eyes.css
+++ b/assets/eyes.css
@@ -1,12 +1,5 @@
-body {
-  margin-top: 0;
-  padding: 0;
-  padding-top: 50px;
-  background: #14495e;
-}
-
 .eyes {
-  position: absolute;
+  position: relative;
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
