--- a/assets/style.css
+++ b/assets/style.css
@@ -379,7 +379,7 @@ body{
     padding-top: 40px;
 }
 .project{
-    padding-top: 30px;
+    padding-top: 80px;
 }
 
 .projects-container{
@@ -398,4 +398,61 @@ body{
     border-radius: 10px;
     border: 1px solid #464646;
     position: relative;
+}
+/*contact section*/
+.contact{
+    width: 100%;
+    height: auto;
+    padding-top: 80px;
+}
+.contact-container{
+    margin: 150px 0 100px;
+    font-size: 2em;
+    width: 100%;
+    padding-left: 20%;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-gap: 50px;
+}
+
+.contact-image{
+    border-radius: 10px;
+
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
+    height: 40%;
+
+}
+
+.contact-paragraph{
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 35px;
+    margin-bottom: 40px;
+}
+.contact-left-col, .contact-right-col{
+    position: relative;
+}
+
+@media (max-width: 500px){
+    html{
+        font-size: 12px;
+    }
+    p, .sub-heading, .about-paragraph, .left-col::before, .tags{
+        font-size: 1.4rem;
+    }
+    .about-image{
+        width: 90%;
+        margin: auto;
+        display: block;
+    }
+    .skills-container, .projects-container{
+        grid-template-columns: 1fr;
+
+    }
+    .skill{
+        font-size: 2.5rem;
+    }
+    .project-tile{
+        font-size: 3rem;
+    }
 }
