--- a/assets/style.css
+++ b/assets/style.css
@@ -404,7 +404,7 @@ body{
     text-decoration: none;
     top: 80px;
     border-radius: 50px;
-    background: #1e3df1;
+    background: #7d7d7e;
     color: #fff;
     text-transform: capitalize;
     border: none;
@@ -414,7 +414,7 @@ body{
 /*contact section*/
 .contact{
     width: 100%;
-    height: auto;
+    height: 300px;
 
     padding-top: 80px;
 }
@@ -453,7 +453,7 @@ body{
     p, .sub-heading, .about-paragraph, .left-col::before, .tags{
         font-size: 1.4rem;
     }
-    .about-image{
+    .about-image, .contact-image{
         width: 90%;
         margin: auto;
         display: block;
@@ -467,5 +467,10 @@ body{
     }
     .project-tile{
         font-size: 3rem;
+    }
+    .education-container{
+
+        grid-template-columns: 1fr;
+
     }
 }
