--- a/assets/style.css
+++ b/assets/style.css
@@ -453,6 +453,7 @@ body {
   line-height: 25px;
   margin-bottom: 10px;
   list-style: none;
+  text-align: center;
 }
 .project-tile {
   padding-top: 40px;
