--- a/assets/style.css
+++ b/assets/style.css
@@ -448,6 +448,8 @@ body {
 }
 
 .school-description {
+  position: relative;
+  display: inline;
   font-size: 1em;
   font-weight: 300;
   line-height: 25px;
