--- a/assets/style.css
+++ b/assets/style.css
@@ -442,7 +442,10 @@ body {
 }
 
 .school-name {
+  position: relative;
   font-size: 2rem;
+  display: inline;
+  text-align: center;
   color: #464646;
   line-height: 200px;
 }
